# derive-trait

./: Cargo.toml  Makefile  README.md  rust-toolchain
src/: lib.rs
